Fix BookHandlerTest